--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
 		<title>Cesium + Webpack</title>
 	</head>
 	<body>
-		<div id="cesiumContainer"></div>
+		<div id="cesiumContainer" class="fullSize"></div>
+		<div id="loadingOverlay"><h1>Loading...</h1></div>
+		<div id="toolbar"></div>
 	</body>
 </html>
