--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>Cesium and Webpack</head>
   <meta charset="utf-8">
-  <!-- Include the CesiumJS JavaScript and CSS files -->
-  <script src="https://cesium.com/downloads/cesiumjs/releases/1.84/Build/Cesium/Cesium.js"></script>
-  <link href="https://cesium.com/downloads/cesiumjs/releases/1.84/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
-</head>
+  <script src="../node_modules/cesium/Build/Cesium/Cesium.js"></script>
+  <link href="../node_modules/cesium/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+
 <body>
   <div id="cesiumContainer"></div>
  </div>
