--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-</head>
-<body>
-  <div id="cesiumContainer"></div>
-</body>
+  <head>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <div id="cesiumContainer"></div>
+  </body>
 </html>
